# lanremote

./: CMakeLists.txt  README.md  cinema.sh  devices.txt  grreader.cpp  grreader.hpp  lanremote.conf  lanremote.hpp  main.cpp  tv_control.cpp  tv_control.hpp  version.h  version.txt  xml_parser.cpp  xml_parser.hpp
